--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -27,7 +27,7 @@ font-family: 'Barlow', sans-serif;
   font-size: 42px;
   line-height: 52px;
   letter-spacing: 1px;
-  margin: 2em 0 0;
+  margin: 1em 0;
 }
 h4 {
    font-family: 'Barlow', sans-serif;
