added media queries

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -5,4 +5,5 @@
 @import "./partials/main";
 @import "./partials/contact";
 @import "./partials/blog";
-@import "./partials/mediaqueries"
+@import "./partials/mediaqueries";
+@import "./partials/contactmediaqueries"
