--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -4,7 +4,6 @@
     height: 60vh;
 }
  h2 {
-    
         margin-top: 1em;
         margin-left: 6.5em;
      }
@@ -39,7 +38,7 @@
     position: relative;
     background-color: $green;
     bottom: 11em;
-    right: -15em;
+    right: -10em;
     margin: 0 2em;
     .positioning{
     top: -250px;
@@ -73,6 +72,7 @@ textarea {
   margin-bottom: 1em;
   background-color: $green;
   color: white;
+  width: 90%;
   font-family: lato;
   border: 3px solid $blue;
   &::placeholder {
