--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -3,9 +3,8 @@
     position: relative;
     height: 60vh;
 }
- h2 {
-        margin-top: 1em;
-        margin-left: 6.5em;
+ .contact-head{
+        border: 1px solid red;
      }
 
 .contact-us{
