--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -6,4 +6,5 @@
 @import "./partials/contact";
 @import "./partials/blog";
 @import "./partials/mediaqueries";
-@import "./partials/contactmediaqueries"
+@import "./partials/contactmediaqueries";
+@import "./partials/blogmediaqueries";
