--- a/styles/styles.css
+++ b/styles/styles.css
@@ -375,9 +375,8 @@ i {
   height: 60vh;
 }
 
-h2 {
-  margin-top: 1em;
-  margin-left: 6.5em;
+.contact-head {
+  border: 1px solid red;
 }
 
 .contact-us {
@@ -530,24 +529,17 @@ h2 {
   height: 60vh;
 }
 
-.blog-position {
+.blog-head h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.blog-position h2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-preferred-size: 60%;
-      flex-basis: 60%;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  margin-top: 2em;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .two-col {
@@ -582,9 +574,14 @@ h2 {
   width: 75%;
 }
 
+.two-col .col-left .blog-text p {
+  margin: .5em 0;
+}
+
 .two-col .col-left h4 {
   color: white;
   background-color: #0f614E;
+  padding: .3em;
 }
 
 .two-col .col-left ul {
@@ -657,8 +654,16 @@ h2 {
   margin-top: 2em;
 }
 
+.two-col .col-right .blog-form {
+  position: relative;
+  bottom: 1em;
+  right: 2em;
+  width: 100%;
+}
+
 .two-col .col-right .blog-form, .two-col .col-right #email, .two-col .col-right #name, .two-col .col-right #message {
   background-color: black;
+  width: 100%;
 }
 
 .two-col .col-right .submit {
@@ -1073,5 +1078,98 @@ h2 {
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
+  }
+}
+
+@media (max-width: 1400px) {
+  h2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .two-col .blog-right-shadow {
+    display: none;
+  }
+}
+
+@media (max-width: 900px) {
+  .blog-header {
+    height: 30vh;
+  }
+  .two-col {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    padding-bottom: 2em;
+    width: 100%;
+  }
+  .two-col .col-left {
+    width: 100%;
+  }
+  .two-col .col-left .blog-text {
+    padding: 3em 0 0 1em;
+    background-color: #0f614E;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .two-col .col-left .blog-text p {
+    margin: .5em 0;
+  }
+  .two-col .col-left .blog-text h4 {
+    padding: 0;
+  }
+  .two-col .col-right {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .two-col .col-right .blog-img-right {
+    position: static;
+  }
+  .two-col .col-right .blog-left-shadow {
+    -webkit-box-shadow: 0px 0px #86E0F9;
+            box-shadow: 0px 0px #86E0F9;
+  }
+  .two-col .col-right .post-right-shadow {
+    margin-top: 10em;
+  }
+  .two-col .col-right .post-right-shadow p:nth-last-of-type(1) {
+    padding-bottom: 3em;
+    line-height: 1.5em;
+  }
+  .two-col .col-right .leave-comment {
+    width: 100%;
+  }
+  .two-col .col-right .blog-form {
+    position: static;
+  }
+}
+
+@media (max-width: 400px) {
+  .blog-post {
+    margin-top: -17em;
+  }
+  .blog-post p {
+    margin-left: 1.4em;
+    font-size: 15px;
+    line-height: 1.5em;
+  }
+  .blog-post p:nth-last-of-type(1) {
+    padding-bottom: 3em;
+    line-height: 1.5em;
+  }
+  .comments-section p {
+    margin-left: 1em;
+    font-size: 15px;
+    line-height: 1.5em;
+  }
+  .comments-section img {
+    margin-top: 2em;
   }
 }
