--- a/styles/sass/partials/_blogmediaqueries.scss
+++ b/styles/sass/partials/_blogmediaqueries.scss
@@ -1,13 +1,34 @@
 @media(max-width: 1400px) {
-      h2 {
-   display: flex;
-   justify-content: center;
+  .blog-head {
+    h2{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+     justify-content: center;
+     padding-top: 1.5em;
+    
     }
+}
 .two-col{
     .blog-right-shadow{
         display: none
         }
     }
+}
+@media(max-width: 1240px) {
+    .blog-head {
+    h2{
+        margin-left: 0;
+    }
+}
+}
+@media(max-width: 1225px) {
+    .blog-head {
+    h2{
+        font-size: 80px;
+        margin: 0 auto;
+    }
+}
 }
 @media(max-width: 900px){
     .blog-header{
@@ -59,6 +80,14 @@
         position: static;
     }
 }
+}
+}
+@media(max-width: 650px) {
+   .blog-head {
+    h2{
+     padding-top: 1.5em;
+     margin-top: 0;
+    }
 }
 }
 @media(max-width: 400px) {
